# Fedora-Freedom

./: Cargo.toml  Fedora-Freedom.sh  LICENSE  README.md  dnf.conf  run.sh
.github/: dependabot.yml
.github/workflows/: release.yml
src/: main.rs
